# zuc

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  justfile
.github/workflows/: ci.yml
benches/: eia3.rs  zuc.rs  zuc128_benchmark.rs
src/: eea3_128.rs  eia3_128.rs  lib.rs  u256.rs  utils.rs  zuc.rs  zuc128.rs  zuc256.rs  zuc256_mac.rs  zuc_data.rs
tests/: zuc128.rs  zuc256.rs
