[package]
name = "zuc"
version = "0.1.0"
edition = "2021"
description = "ZUC Stream Cipher Algorithms"
license = "MIT"
repository = "https://github.com/Nugine/zuc"
readme = "README.md"
documentation = "https://docs.rs/zuc"
categories = ["cryptography"]
keywords = ["zuc", "eea", "eia", "stream-cipher", "crypto"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
cipher = "0.4.4"
const-str = "0.5.7"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "zuc128_benchmark"
harness = false
